<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.lpo</groupId>
    <artifactId>todo-app-plus</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <version.javalin>5.6.3</version.javalin>
        <version.jte>3.1.6</version.jte>
        <version.jooq>3.19.1</version.jooq>
        <version.pac4j>6.0.1</version.pac4j>
        <version.liquibase>4.25.0</version.liquibase>
        <version.postgresql>42.6.0</version.postgresql>
        <version.hikaricp>5.1.0</version.hikaricp>
        <version.logback>1.4.12</version.logback>
        <version.sqids>0.1.0</version.sqids>
        <version.junit5>5.10.0</version.junit5>
        <version.assertj>3.24.2</version.assertj>
        <version.mockito>5.4.0</version.mockito>
        <version.testcontainers>1.19.3</version.testcontainers>
    </properties>

    <dependencies>
        <!-- Main dependencies -->
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>${version.javalin}</version>
        </dependency>
        <dependency>
            <groupId>gg.jte</groupId>
            <artifactId>jte</artifactId>
            <version>${version.jte}</version>
        </dependency>
        <dependency>
            <groupId>gg.jte</groupId>
            <artifactId>jte-models</artifactId>
            <version>${version.jte}</version>
        </dependency>
        <dependency>
            <groupId>org.jooq</groupId>
            <artifactId>jooq</artifactId>
            <version>${version.jooq}</version>
        </dependency>
        <dependency>
            <groupId>org.pac4j</groupId>
            <artifactId>pac4j-oidc</artifactId>
            <version>${version.pac4j}</version>
        </dependency>
        <dependency>
            <groupId>org.pac4j</groupId>
            <artifactId>pac4j-jakartaee</artifactId>
            <version>${version.pac4j}</version>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${version.liquibase}</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${version.postgresql}</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${version.hikaricp}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${version.logback}</version>
        </dependency>
        <dependency>
            <groupId>org.sqids</groupId>
            <artifactId>sqids</artifactId>
            <version>${version.sqids}</version>
        </dependency>
        <dependency>
            <groupId>com.mattbertolini</groupId>
            <artifactId>liquibase-slf4j</artifactId>
            <version>5.0.0</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${version.junit5}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${version.assertj}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>${version.testcontainers}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${version.testcontainers}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <version>${version.testcontainers}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>todo-app-plus</finalName>
        <plugins>
            <!-- [PoI] JOOQ generate sources -->
            <plugin>
                <groupId>org.jooq</groupId>
                <artifactId>jooq-codegen-maven</artifactId>
                <version>${version.jooq}</version>
                <configuration>
                    <generator>
                        <database>
                            <name>org.jooq.meta.extensions.liquibase.LiquibaseDatabase</name>
                            <properties>
                                <property>
                                    <key>rootPath</key>
                                    <value>${basedir}/src/main/resources</value>
                                </property>
                                <property>
                                    <key>scripts</key>
                                    <value>db-migrations/master.yml</value>
                                </property>
                                <property>
                                    <key>includeLiquibaseTables</key>
                                    <value>true</value>
                                </property>
                                <property>
                                    <key>database.url</key>
                                    <value>jdbc:h2:mem:todo-db</value>
                                </property>
                                <property>
                                    <key>changeLogParameters.contexts</key>
                                    <value>!dev</value>
                                </property>
                            </properties>
                        </database>
                    </generator>
                </configuration>
                <executions>
                    <execution>
                        <id>jooq-codegen</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.jooq</groupId>
                        <artifactId>jooq-meta-extensions-liquibase</artifactId>
                        <version>${version.jooq}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.yaml</groupId>
                        <artifactId>snakeyaml</artifactId>
                        <version>1.33</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- [PoI] JTE precompile -->
            <plugin>
                <groupId>gg.jte</groupId>
                <artifactId>jte-maven-plugin</artifactId>
                <version>${version.jte}</version>
                <configuration>
                    <sourceDirectory>src/main/templates</sourceDirectory>
                    <targetDirectory>target/generated-sources/jte</targetDirectory>
                    <contentType>Html</contentType>
                    <extensions>
                        <extension>
                            <className>gg.jte.models.generator.ModelExtension</className>
                        </extension>
                    </extensions>
                </configuration>
                <executions>
                    <execution>
                        <id>jooq-codegen</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>gg.jte</groupId>
                        <artifactId>jte-models</artifactId>
                        <version>${version.jte}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Unit test execution: Fix to make Mockito work with Java 21 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>
                        -Dnet.bytebuddy.experimental=true
                    </argLine>
                </configuration>
            </plugin>

            <!-- Integration test execution -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Package the JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <transformers>
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>de.lpo.todo.TodoAppPlusMain</mainClass>
                        </transformer>
                    </transformers>
                    <filters>
                        <filter> <!-- This filter is needed to avoid a bug in the shade plugin -->
                            <artifact>*:*</artifact>
                            <excludes>#
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>